scripts.txt
# vscode 프로젝트 만든 뒤 실행하는 스크립트 모음
# 아래 내용은 모두 터미널( cmd ) 에서 실행할 명령이며, vscode로 프로젝트를 만든 뒤
  터미널을 실행하여 구동한다.
# python 설치는 선행하자. windows store에서 찾아 설치할 수 있다.

# pip 및 관련 라이브러리 설치
python.exe -m pip install --upgrade pip
pip install requests pandas python-dotenv

python -m venv venv
( no output )

# Windows
.\venv\Scripts\activate
# Mac/Linux
source venv/bin/activate
( no output, but from now, cmd prompt will have venv env.)

python --version
(output) Python 3.13.9

python -c "import struct; print(struct.calcsize('P') * 8)"
(output)  64


아래는 github copilot 프롬프트
- 1.getToken.py 파일에서 appkey와 secretkey는 private한 정보이기 대문에 코드에 넣으면 안될 것 같아. .env 파일에 정보를 저장하고 실행할때 꺼내쓰도록 수정해줘
- kiwoomSample.py 파일도 똑같이 고쳐줘
- kiwoomsample.py에 있는 host 파일의 정보인 restapi base url을 함께 .env에 넣어줘
- main.py 에서 실행하는 프로그램을 만들었어. 그런데 여기에서 토큰 발급 부분이 실제로는 동작하지 않는 코드인 것이 보여. 앞서서 kiwoomsample.py 파일의 구현부를 참고해서 token 발급부를 완성하고 이 프로그램을 완성해줘
- 
[Error] 토큰 발급 중 오류: 'NoneType' object is not subscriptable
Traceback (most recent call last):
  File "c:\Users\user\Documents\workspace\stock study\quantum\main.py", line 16, in <module>
    main()
    ~~~~^^
  File "c:\Users\user\Documents\workspace\stock study\quantum\main.py", line 9, in main
    broker = KiwoomREST()
  File "c:\Users\user\Documents\workspace\stock study\quantum\core\api_handler.py", line 20, in __init__
    self._get_access_token()
    ~~~~~~~~~~~~~~~~~~~~~~^^
  File "c:\Users\user\Documents\workspace\stock study\quantum\core\api_handler.py", line 45, in _get_access_token
    print(f"[Quantum] 토큰 발급 성공: {self.access_token[:20]}...")
                                       ~~~~~~~~~~~~~~~~~^^^^^
TypeError: 'NoneType' object is not subscriptable
- api_handler 파일이 요청에 오류가 있어. 역시 kiwoomsample.py를 분석해서 호출부를 고쳐줘.  키움의 삼성 호가 조회를 위한 정보를 알려줄께
1. endpoint : /api/dostk/mrkcond
2. api-id : ka10004
3. 현재 오류메시지 : 
==============================
   Quantum (REST API Ver.)   
==============================
[Quantum] 토큰 발급 시도...
[Quantum] URL: https://api.kiwoom.com/oauth2/token
[Quantum] AppKey: dwX8jQgtMl...
[Quantum] 응답 상태코드: 200
[Quantum] 응답 내용: {"expires_dt":"20260118130816","return_msg":"정상적으로 처리되었습니다","token_type":"Bearer","return_code":0,"token":"Z7FjNZ69I0TvgCqgrMbkfHTzactTYgAz8_cJebVcvWj_l_8IMUX1hiYhVspzfkvKj6JBwaL06O8_GDdza1bNtg"}
[Quantum] 토큰 발급 성공: Z7FjNZ69I0TvgCqgrMbk...
[Quantum] 005930 종목 시세 조회 요청 중...
[Error] 조회 실패 (Status: 500)
[Error] 응답: {"date":"2026-01-17T07:43:15.523+0000","error":"INTERNAL_SERVER_ERROR","status":500,"message":"예기치 못한 에러가 발생하였습니다"}
결과: None
- [Quantum] URL: https://api.kiwoom.com/api/dostk/mrkcond
[Quantum] 응답 상태코드: 200
[Quantum] 응답 내용: {"return_msg":"입력 값 오류입니다[1511:필수 입력 값에 값이 존재하지 않습니다. 필수입력 파라미터=stk_cd]","return_code":2}
[Quantum] 조회 성공
결과: {'return_msg': '입력 값 오류입니다[1511:필수 입력 값에 값이 존재하지 않습니다. 필수입력 파라미터=stk_cd]', 'return_code': 2}
홈페이지 확인해보니 stk_cd 는 아래처럼 정의되어 있어.
stk_cd	종목코드	String	Y	20	거래소별 종목코드
(KRX:039490,NXT:039490_NX,SOR:039490_AL)
- 기능을 하나 추가하자. get_realtime_price 라고 만들고 기능을 준비해줘. 우선 기능은 간단하게만 정의해줘
- main.py에서도 이 기능을 사용해서 결과를 보여주도록 하자
- api 정의서 내용을 붙여줄께.
Method POST
운영 도메인 wss://api.kiwoom.com:10000
모의투자 도메인 wss://mockapi.kiwoom.com:10000(KRX만 지원가능)
URL /api/dostk/websocket
Format JSON
Content-Type application/json;charset=UTF-8
tr : 주문체결 - 00
요청 body ->
trnm 서비스명 String Y 10 REG : 등록 , REMOVE : 해지
grp_no 그룹번호 String Y 4
refresh 기존등록유지여부 String Y 1 등록(REG)시
0:기존유지안함 1:기존유지(Default)
0일경우 기존등록한 item/type은 해지, 1일경우 기존등록한 item/type 유지
해지(REMOVE)시 값 불필요
data 실시간 등록 리스트 LIST

item 실시간 등록 요소 String[ ] N 100
type 실시간 항목 String[ ] Y 2 TR 명(0A,0B....)
응답 body ->
return_code 결과코드 int N 통신결과에대한 코드
(등록,해지요청시에만 값 전송 0:정상,1:오류 , 데이터 실시간 수신시 미전송)
return_msg 결과메시지 String N 통신결과에대한메시지
trnm 서비스명 String N 등록,해지요청시 요청값 반환 , 실시간수신시 REAL 반환
data 실시간 등록리스트 LIST N
type 실시간항목 String N TR 명(0A,0B....)
name 실시간 항목명 String N
item 실시간 등록 요소 String N 종목코드
values 실시간 값 리스트 LIST N
9201 계좌번호 String N

9203 주문번호 String N

9205 관리자사번 String N

9001 종목코드,업종코드 String N

912 주문업무분류 String N

913 주문상태 String N 접수, 체결, 확인, 취소, 거부
302 종목명 String N

900 주문수량 String N

901 주문가격 String N

902 미체결수량 String N

903 체결누계금액 String N

904 원주문번호 String N

905 주문구분 String N "+/-", 매도, 매수, 매도정정, 매수정정, 매수취소, 매도취소
※ 영웅문4에서 적색으로 표기되어있으면 +가, 청색으로 표기되어있으면 -가 앞에 기재됩니다

906 매매구분 String N 보통, 시장가, 조건부지정가, 최유리지정가, 최우선지정가, 보통(IOC), 시장가(IOC), 최유리(IOC), 보통(FOK), 시장가(FOK), 최유리(FOK), 스톰지정가, 중간가, 중간가(IOC), 중간가(FOK), 장전시간외, 장후시간외, 시간외대량, 시간외바스켓, 시간외자사주, 시간외단일가
907 매도수구분 String N 1:매도, 2:매수
908 주문/체결시간 String N

909 체결번호 String N

910 체결가 String N

911 체결량 String N

10 현재가 String N

27 (최우선)매도호가 String N

28 (최우선)매수호가 String N

914 단위체결가 String N

915 단위체결량 String N

938 당일매매수수료 String N

939 당일매매세금 String N

919 거부사유 String N

920 화면번호 String N

921 터미널번호 String N

922 신용구분 String N 실시간 체결용
923 대출일 String N 실시간 체결용
10010 시간외단일가_현재가 String N

2134 거래소구분 String N 0:통합,1:KRX,2:NXT
2135 거래소구분명 String N 통합,KRX,NXT
2136 SOR여부 String N Y,N

- 2번이 좋겠어. 삼성전자 정보를 모니터링하자
- PS C:\Users\user\Documents\workspace\stock study> & C:/Users/user/AppData/Local/Microsoft/WindowsApps/python3.13.exe "c:/Users/user/Documents/workspace/stock study/quantum/main.py"
Traceback (most recent call last):
  File "c:\Users\user\Documents\workspace\stock study\quantum\main.py", line 1, in <module>
    from core.api_handler import KiwoomREST
  File "c:\Users\user\Documents\workspace\stock study\quantum\core\api_handler.py", line 5, in <module>
    import websocket
ModuleNotFoundError: No module named 'websocket'
